--- a/blogspot.html
+++ b/blogspot.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="Imagenes/dragon.png" />
                 Hyperblog
                 <spain id="tagline">Tu blog de cabecera</spain>
             </div>
