Cabecera footer terminada

--- a/blogspot.html
+++ b/blogspot.html
@@ -17,6 +17,8 @@
                 </p>
                 <p>Suscribete y Dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en platzi <3.   
         </div>
     </body>
 </html>
